fix: Display short address on smaller screens, add sticky table cells

--- a/src/components/balances/AssetsTable/styles.module.css
+++ b/src/components/balances/AssetsTable/styles.module.css
@@ -12,3 +12,9 @@
   align-items: center;
   gap: var(--space-1);
 }
+
+@media (max-width: 600px) {
+  .container td:last-of-type button {
+    opacity: 1;
+  }
+}
