--- a/src/components/common/EthHashInfo/styles.module.css
+++ b/src/components/common/EthHashInfo/styles.module.css
@@ -30,3 +30,17 @@
 .nameRow {
   overflow: hidden;
 }
+
+.mobileAddress {
+  display: none;
+}
+
+@media (max-width: 600px) {
+  .mobileAddress {
+    display: block;
+  }
+
+  .address {
+    display: none;
+  }
+}
